@@ -24,7 +24,6 @@
                 <div class="board"></div>
                 <button class="button">New Game</button>
                 <div class="alerts"></div>
-                <div class="finished"></div>
             </div>
             
             <!-- right side - player 2 -->
